refactor(CarsTest, Car, Cars): 테스트하기 용이한 코드를 작성하기 위해 수정